<resources>
    <string name="notification_description">Application is running in background</string>
    <string name="foreground_channel_description">Notification channel of foreground service</string>
    <string name="service_description">Service contains all logic of application.</string>
    <string name="alarm_button_text">Alarm</string>
    <string name="tracker_button_text">Tracker</string>
    <string name="tracker_button_text_meters">%1.2f m</string>
    <string name="tracker_button_text_kilometers">%1.2f km</string>
    <string name="power_save_mode_message">Power save mode active</string>
    <string name="btn_login">Login</string>
    <string name="btn_logout">Logout</string>
    <string name="input_username">User name</string>
    <string name="input_password">Password</string>
    <string name="login_user_text">You are logged in as a %s</string>
    <string name="err_login_invalid_inputs">Username and password can not be empty.</string>
    <string name="err_login_failed">Login failed server is unreachable.</string>
    <string name="err_login_already_login">User is already logged in.</string>
    <string name="err_login_init_network">Can not initialize network provider.</string>
    <string name="err_login_credentials">Invalid credentials.</string>
    <string name="err_login_bad_request">Can not communicate with server. Http status code: %d</string>
    <string name="err_get_cars_failed">Can not get users cars from server. Please try again later.</string>
    <string name="err_create_car_failed">Can not create car on server. Please try again later.</string>
    <string name="select_car">Select your car</string>
    <string name="create_new_car">Create new car</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_sensors">Sensors</string>
    <string name="pref_header_alarm">Alarm</string>
    <string name="pref_header_tracker">Tracker</string>
    <string name="pref_header_communication">Communication</string>
    <string name="pref_header_power_save_mode">Power-save mode</string>
    <string name="title_fragment_status">Status</string>
    <string name="status_fragment_label">Records in database</string>
    <string name="status_fragment_event_message">Number of events: %d</string>
    <string name="status_fragment_route_message">Number of routes: %d</string>
    <string name="status_fragment_position_message">Number of positions: %d</string>
    <string name="pref_tools_alarm_group_name">Alarm</string>
    <string name="pref_tool_alarm_telephony_permission_message">For creating of automatic calls application need permission. Next dialog will be asking for needed permission.</string>
    <string name="pref_tools_alarm_switch_title">Allow Alarm</string>
    <string name="pref_tools_alarm_switch_description">Allow use of alarm. Does not turn on Alarm system.</string>
    <string name="pref_tools_alarm_start_interval_title">Start interval</string>
    <string name="pref_tools_alarm_start_interval_description">Interval before alarm system is enabled.</string>
    <string name="pref_tools_alarm_alert_interval_title">Alert interval</string>
    <string name="pref_tools_alarm_alert_interval_description">Interval before alarm is triggered after any detection.</string>
    <string name="pref_tools_alarm_send_location_interval_title">Sms location interval</string>
    <string name="pref_tools_alarm_send_location_interval_description">How often will be send sms with car location when alarm is triggered. Used only when send sms on alarm is enabled.</string>
    <string name="pref_tools_alarm_siren_is_allowed_title">Siren</string>
    <string name="pref_tools_alarm_siren_is_allowed_description">Enable or disable siren sound on trigger alarm. Is recommended to use only with external siren.</string>
    <string name="pref_tool_alarm_is_call_allowed_title">Make call</string>
    <string name="pref_tool_alarm_is_call_allowed_description">When alarm is triggered system make call to defined contact number.</string>
    <string name="pref_tools_tracker_group_name">Tracker</string>
    <string name="pref_tools_tracker_switch_title">Allow Tracker</string>
    <string name="pref_tools_tracker_switch_description">Allow use of tracker. Does not turn on Tracker system.</string>
    <string name="pref_tools_tracker_timeout_title">Timeout</string>
    <string name="pref_tools_tracker_timeout_description">Timeout before tracker is turned off when car is not moving.</string>
    <string name="pref_tools_tracker_ignore_distance_title">Not moving distance</string>
    <string name="pref_tools_tracker_ignore_distance_description">Minimal distance between last and actual position which is accepted (elimination of error when car is not moving).</string>
    <string name="pref_sensors_move_group_name">Move sensor</string>
    <string name="pref_sensors_move_switch_title">Allow Move sensor</string>
    <string name="pref_sensors_move_switch_description"> </string>
    <string name="pref_sensors_move_sensitivity_title">Sensor sensitivity</string>
    <string name="pref_sensors_move_sensitivity_description">Low value means high sensitivity.</string>
    <string name="pref_sensors_sound_group_name">Sound sensor</string>
    <string name="pref_sensors_sound_audio_permission_message">For using of sound sensor application need a permission. Next dialog will be asking for needed permission.</string>
    <string name="pref_sensors_sound_switch_title">Allow Sound sensor</string>
    <string name="pref_sensors_sound_switch_description"> </string>
    <string name="pref_sensors_sound_max_amplitude_title">Sensor sensitivity</string>
    <string name="pref_sensors_sound_max_amplitude_description">Low value mean high sensitivity.</string>
    <string name="pref_sensors_sound_interval_title">Measure interval</string>
    <string name="pref_sensors_sound_interval_description">Interval how often are check sensor data (High interval save battery).</string>
    <string name="pref_sensors_location_group_name">Location sensor</string>
    <string name="pref_sensors_location_fine_location_permission_message">For getting device location application needs a permission. Next dialog will be asking for needed permission.</string>
    <string name="pref_sensors_location_switch_title">Allow Location sensor</string>
    <string name="pref_sensors_location_switch_description"> </string>
    <string name="pref_sensors_location_update_interval_title">Location update interval</string>
    <string name="pref_sensors_location_update_interval_description">How often is stored actual location. Long interval save battery.</string>
    <string name="pref_sensors_location_accuracy_title">Sensor accuracy</string>
    <string name="pref_sensors_location_accuracy_description">Maximal accuracy of GPS. Precise GPS drains more battery.</string>
    <string-array name="pref_sensors_location_accuracy_list">
        <item>High accuracy</item>
        <item>Balanced power accuracy (±100m)</item>
        <item>Low power (±10km)</item>
    </string-array>
    <string name="pref_communication_sms_group_name">SMS</string>
    <string name="pref_communication_sms_permission_message">For sending and receiving sms messages application needs permission. Next dialog will be asking for needed permission.</string>
    <string name="pref_communication_sms_switch_title">Allow sms communication</string>
    <string name="pref_communication_sms_switch_description"> </string>
    <string name="pref_communication_sms_phone_number_title">Phone number</string>
    <string name="pref_communication_sms_phone_number_description">Contact phone number for calls and sms communication. Commands will be accepted only from this number.</string>
    <string name="pref_communication_sms_message_types_title">Sms types</string>
    <string name="pref_communication_sms_message_types_description">Sets which messages are allowed to send or receive via SMS</string>
    <string-array name="pref_communication_sms_messages">
        <item>Alarm send tool switch</item>
        <item>Tracker send tool switch</item>
        <item>Send alarm</item>
        <item>Send alarm location</item>
        <item>Send battery notification</item>
        <item>Send power connected</item>
        <item>Send power disconnected</item>
        <item>Command tool switch</item>
        <item>Command send status</item>
        <item>Command send location</item>
    </string-array>
    <string name="pref_communication_network_group_name">Network</string>
    <string name="pref_communication_network_permission_message">For communication with server application needs permission. Next dialog will be asking for needed permission.</string>
    <string name="pref_communication_network_switch_title">Allow network communication</string>
    <string name="pref_communication_network_switch_description"> </string>
    <string name="pref_communication_network_url_title">Server url</string>
    <string name="pref_communication_network_url_description">Url address of server on which can be store and manage settings and Tracker data. Url must starts with \'http\' or \'https\'</string>
    <string name="pref_communication_network_cellular_title">Mobile data Synchronization</string>
    <string name="pref_communication_network_cellular_description">Synchronization with server can be via mobile data.</string>
    <string name="pref_communication_network_message_types_title">Additional communication</string>
    <string name="pref_communication_network_message_types_description">Sets which messages are allowed to send over network. All messages from tracker are allowed by default.</string>
    <string name="pref_communication_network_update_interval_title">Synchronization interval</string>
    <string name="pref_communication_network_update_interval_description">Sets how often will be synchronize data with server</string>
    <string-array name="pref_communication_network_messages">
        <item>Tool state changed</item>
        <item>Alarm + Alarm position</item>
        <item>Battery state changed</item>
    </string-array>
    <string name="pref_power_save_mode_switch_title">Allow power save mode</string>
    <string name="pref_power_save_mode_switch_description">Allows automatically switch to power save mode when battery level is critical. In power save mode will be disabled: sound sensor, tracker, alarm siren and send sms location alarm interval will increase.</string>
    <string name="pref_tool_battery_critical_level_title">Critical level</string>
    <string name="pref_tool_battery_critical_level_description">Battery level in which will be enable power save mode</string>
    <string name="navigation_panel_open">Open navigation panel</string>
    <string name="navigation_panel_close">Close navigation panel</string>
    <string name="nav_image_description">Car security application icon</string>
    <string name="menu_settings_title">Settings</string>
    <string name="menu_login_title">Login</string>
    <string name="menu_home_title">Home</string>
    <string name="menu_status_title">Status</string>
    <string name="sms_util_enabled">%s is enabled</string>
    <string name="sms_util_disabled">%s is disabled</string>
    <string name="sms_alarm">Alarm was triggered at: %s.</string>
    <string name="sms_location">Actual car location is lat: %1$s, long: %2$s https://www.google.com/maps/search/\?api=1&amp;query=%1$s,%2$s</string>
    <string name="sms_battery_warn">Battery capacity is low: %s %%</string>
    <string name="sms_info_battery_charging">Battery is charging and capacity is %s %%</string>
    <string name="sms_info_battery_not_charging">Battery is not charging and capacity is %s %%</string>
    <string name="sms_power_connected">Power is connected. Battery level is %s %%</string>
    <string name="sms_power_disconnected">Power is disconnected! Battery level is %s %%</string>
</resources>