<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="25dp"
    android:paddingRight="25dp">

    <TextView
        android:id="@+id/status_label_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/status_fragment_label"
        android:textColor="#000000"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/status_event_message_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/status_fragment_event_message"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/status_route_message_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/status_fragment_route_message"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/status_position_message_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/status_fragment_position_message"
        android:textSize="15sp" />


</LinearLayout>