<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:icon="@drawable/ic_developer_board_black_24dp"
        android:fragment="com.example.tomas.carsecurity.SettingsActivity$ToolsPreferenceFragment"
        android:title="@string/pref_header_tools" />

    <header
        android:icon="@drawable/ic_extension_black_24dp"
        android:fragment="com.example.tomas.carsecurity.SettingsActivity$SensorsPreferenceFragment"
        android:title="@string/pref_header_sensors" />

    <header
        android:icon="@drawable/ic_swap_horiz_black_24dp"
        android:fragment="com.example.tomas.carsecurity.SettingsActivity$CommunicationPreferenceFragment"
        android:title="@string/pref_header_communication" />

    <header
        android:icon="@drawable/ic_battery_alert_green_24dp"
        android:fragment="com.example.tomas.carsecurity.SettingsActivity$PowerSaveModePreferenceFragment"
        android:title="@string/pref_header_power_save_mode" />

</preference-headers>
